# iTreeClust

./: LICENSE  README.md  pyproject.toml  requirements.txt  run_itreeclust.py
data/16s_01/: 16s_01.csv  16s_01.fasta  16s_3class_10k_g150_hierarchy.txt
data/16s_02/: 16s_02.csv  16s_02.fasta  16s_4class_10k_g200_hierarchy.txt
data/18s_01/: 18s_01.csv  18s_01.fasta  18s_2class_10k_g80_easy_hierarchy.txt
data/18s_02/: 18s_02.csv  18s_02.fasta  18s_3class_10k_g90_easy_hierarchy.txt
data/selected_coi_06/: selected_coi_06.fasta  selected_coi_06_taxonomy.csv  selected_coi_06_taxonomy.txt  selected_coi_06_taxonomy_tree.txt
data/selected_coi_09/: coi_balanced_3class_10k_g240_hierarchy.txt  coi_balanced_3class_10k_g240_test_taxonomy.txt  selected_coi_09.fasta  selected_coi_09_taxonomy.csv
examples/: toy.fasta  toy_taxonomy.csv
itreeclust/: __init__.py  base_algorithms.py  cli.py  posthoc_tree.py
outputs/toy_tree/: node_taxonomy_summary.csv  run_config.json  tree_edges.csv  tree_level_assignments.csv  tree_level_summary.csv  tree_node_representatives.fasta  tree_nodes.csv
tests/: test_toy_cli.sh
